@@ -31,6 +31,8 @@ SVN trunk (1.1+svn):
    stats.wesnoth.org
    * Support for zipios++ can now be disabled by passing --without-zipios
    to configure - no need to de/re-install it anymore.
+   * functions to easily create one frame anims in code, to handle deprecated
+   images better
 
 Version 1.1:
  * campaign server
